orderSystem/k8s/ordersystem_depl.yml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: ordersystem-deployment
#   namespace: hannah
# spec:
#   replicas: 2
#   selector:
#     matchLabels:
#       app: ordersystem
#   template:
#     metadata:
#       labels:
#         app: ordersystem
#     spec:
#       containers:
#         - name: ordersystem
#         # aws의 ecr주소 사용
#           image: 346903264902.dkr.ecr.ap-northeast-2.amazonaws.com/hannah-ordersystem:latest
#           ports:
#           - containerPort: 8080
#           # 각 컨테이너의 최대 resources 지정
#           resources:
#           # 최대 할당가능량
#             limits:
#               cpu: "1"
#               memory: "500Mi"
#               # 최소 할당량
#             requests:
#               cpu: "1"
#               memory: "500Mi"
#           env:
#           - name: REDIS_HOST
#             valueFrom:
#               secretKeyRef:
#                 key: REDIS_HOST
#                 name: hannah-app-secrets
#           - name: DB_HOST
#             valueFrom:
#               secretKeyRef:
#                 key: DB_HOST
#                 name: hannah-app-secrets
#           - name: DB_USERNAME
#             valueFrom:
#               secretKeyRef:
#                 key: DB_USERNAME
#                 name: hannah-app-secrets
#           - name: DB_PASSWORD
#             valueFrom:
#               secretKeyRef:
#                 key: DB_PASSWORD
#                 name: hannah-app-secrets
#           - name: JWT_SECRET
#             valueFrom:
#               secretKeyRef:
#                 key: JWT_SECRET
#                 name: hannah-app-secrets
#           - name: JWT_SECRET_RT
#             valueFrom:
#               secretKeyRef:
#                 key: JWT_SECRET_RT
#                 name: hannah-app-secrets
#           - name: AWS_ACCESS_KEY
#             valueFrom:
#               secretKeyRef:
#                 key: AWS_ACCESS_KEY
#                 name: hannah-app-secrets
#           - name: AWS_SECRET_KEY
#             valueFrom:
#               secretKeyRef:
#                 key: AWS_SECRET_KEY
#                 name: hannah-app-secrets##

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ordersystem-deployment
  namespace: hannah
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ordersystem
  template:
    metadata:
      labels:
        app: ordersystem
    spec:
      containers:
        - name: ordersystem
          image: 346903264902.dkr.ecr.ap-northeast-2.amazonaws.com/hannah-ordersystem:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "1"
              memory: "500Mi"
            requests:  
              cpu: "1"
              memory: "500Mi"
