orderSystem/k8s/ordersystem_service.yml
apiVersion: v1
kind: Service
metadata: 
  name: ordersystem-service
  namespace: hannah 
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      #pod의 포트
      targetPort: 8080
  selector:
    app: ordersystem
